--- a/test_markdown_to_GitHub.Rmd
+++ b/test_markdown_to_GitHub.Rmd
@@ -2,7 +2,7 @@
 title: "Test for Markdown to GitHub"
 author: "Martin"
 date: "4/5/2020"
-output: html_document
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
