Deleted every thing to start fresh file.

--- a/test_markdown_to_GitHub.Rmd
+++ b/test_markdown_to_GitHub.Rmd
@@ -5,26 +5,16 @@ date: "4/5/2020"
 output: github_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+```{r}
+library(tidyverse)
 ```
 
-## R Markdown
+This is the file where I will explain the idea and the process.
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+```{r}
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+test_object <- "TEST"
+print(test_object)
 
-```{r cars}
-summary(cars)
+str_c("Ceci est un ", test_object, ".")
 ```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
